--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
     "require": {
         "php": "7.*",
         "silex/silex": "~1.3",
-        "fabpot/goutte": "^3.1"
+        "fabpot/goutte": "^3.1",
+        "doctrine/dbal": "~2.2",
+        "vlucas/phpdotenv": "^2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "5.0.*",
