--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,23 @@
 version: '2'
 services:
-  app:
-    container_name: app
-    build: .
-    volumes:
-      - .:/var/www
-    depends_on:
-      - webserver
-      - db
-
   webserver:
     container_name: webserver
     image: nginx
     ports:
       - "80:80"
     volumes:
+      - .:/var/www
       - ./provision/vhost.conf:/etc/nginx/conf.d/default.conf
     depends_on:
+      # the fastcgi_pass option in vhost depends on php
       - php
 
   php:
     container_name: php
     image: php:7.0-fpm
-    command: bash ./provision/bootstrap-php.sh
-#    command: bash -c "apt-get update && apt-get install -y git && docker-php-ext-install mbstring pcntl soap xdebug && php-fpm"
     volumes:
       - .:/var/www/html
+    command: bash ./provision/bootstrap-php.sh
     ports:
       - "9000:9000"
 
@@ -34,7 +26,4 @@ services:
     image: mysql
     ports:
       - "3306:3306"
-    environment:
-      MYSQL_DATABASE: "scraper"
-      MYSQL_ROOT_USER: "scraper"
-      MYSQL_ROOT_PASSWORD: "dkH6*ep23B_xS28dMsphG"
+    env_file: web/.env
